@@ -2386,10 +2386,14 @@ g_getenv (const gchar *variable)
 {
   gchar *utf8_variable = g_locale_to_utf8 (variable, -1, NULL, NULL, NULL);
   const gchar *utf8_value = g_getenv_utf8 (utf8_variable);
-  gchar *value = g_locale_from_utf8 (utf8_value, -1, NULL, NULL, NULL);
-  GQuark quark = g_quark_from_string (value);
+  gchar *value;
+  GQuark quark;
 
   g_free (utf8_variable);
+  if (!utf8_value)
+    return NULL;
+  value = g_locale_from_utf8 (utf8_value, -1, NULL, NULL, NULL);
+  quark = g_quark_from_string (value);
   g_free (value);
 
   return g_quark_to_string (quark);
